--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-Us">
 	<head>
-		<title>This is my first page.</title>
+		<title>Home page</title>
 	</head>
 	<body>
 		<nav></nav>
