--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-Us">
 	<head>
-		<title>Home page</title>
+		<title>Home page -- change to be push to Github</title>
 	</head>
 	<body>
 		<nav></nav>
